usr/src/uts/common/io/scsi/adapters/mpt_sas/mptsas_init.c
@@ -178,7 +178,7 @@ mptsas_ioc_get_facts(mptsas_t *mpt)
 	/*
 	 * Send get facts messages
 	 */
-	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_FACTS_REQUEST), NULL,
+	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_FACTS_REQUEST), 0,
 	    mptsas_ioc_do_get_facts)) {
 		return (DDI_FAILURE);
 	}
@@ -186,7 +186,7 @@ mptsas_ioc_get_facts(mptsas_t *mpt)
 	/*
 	 * Get facts reply messages
 	 */
-	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_FACTS_REPLY), NULL,
+	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_FACTS_REPLY), 0,
 	    mptsas_ioc_do_get_facts_reply)) {
 		return (DDI_FAILURE);
 	}
@@ -560,7 +560,7 @@ mptsas_ioc_enable_event_notification(mptsas_t *mpt)
 	/*
 	 * Send enable event notification message
 	 */
-	if (mptsas_do_dma(mpt, sizeof (MPI2_EVENT_NOTIFICATION_REQUEST), NULL,
+	if (mptsas_do_dma(mpt, sizeof (MPI2_EVENT_NOTIFICATION_REQUEST), 0,
 	    mptsas_ioc_do_enable_event_notification)) {
 		return (DDI_FAILURE);
 	}
@@ -568,7 +568,7 @@ mptsas_ioc_enable_event_notification(mptsas_t *mpt)
 	/*
 	 * Get enable event reply message
 	 */
-	if (mptsas_do_dma(mpt, sizeof (MPI2_EVENT_NOTIFICATION_REPLY), NULL,
+	if (mptsas_do_dma(mpt, sizeof (MPI2_EVENT_NOTIFICATION_REPLY), 0,
 	    mptsas_ioc_do_enable_event_notification_reply)) {
 		return (DDI_FAILURE);
 	}
@@ -641,7 +641,7 @@ mptsas_ioc_init(mptsas_t *mpt)
 	/*
 	 * Send ioc init message
 	 */
-	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_INIT_REQUEST), NULL,
+	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_INIT_REQUEST), 0,
 	    mptsas_do_ioc_init)) {
 		return (DDI_FAILURE);
 	}
@@ -649,7 +649,7 @@ mptsas_ioc_init(mptsas_t *mpt)
 	/*
 	 * Get ioc init reply message
 	 */
-	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_INIT_REPLY), NULL,
+	if (mptsas_do_dma(mpt, sizeof (MPI2_IOC_INIT_REPLY), 0,
 	    mptsas_do_ioc_init_reply)) {
 		return (DDI_FAILURE);
 	}
